Updated the Automated Project-6 as per review comments.
Signed-off-by: geshms <gesh_ms@aol.com>

--- a/MSG_STC_TEAM7A/src/test/resources/config/project.properties
+++ b/MSG_STC_TEAM7A/src/test/resources/config/project.properties
@@ -7,21 +7,21 @@ browser = chrome
 testURL = https://uk.rs-online.com/web/
 
 #Wait
-waitTime = 5
+waitTime = 2
 
 ############## OBJECT REPOSITORY ################
 
 ######## RS-uk Home Page ########
-RS-uk_logo_link = //a[@class="rslogo" and @title="Home"]
-searchTextBox =//*[@id="searchTerm"]
+RS-uk_logo_link = //a[@class='rslogo' and @title='Home']
+searchTextBox =//*[@id='searchTerm']
 searchButton =//*[@id='btnSearch' and @type='submit']
 
 ######## Search Result Page ########
 firstProductaddToBasketButton =(//button/*[contains(text(),'Add')])[1]
-productBasketLink = //*[@title="1 item(s) in basket"]
+productBasketLink = //*[@class='icon-cart']
 
 ######## My basket Page ########
 Mybasketitemdescription=//td[@class='descriptionTd']//a
 
 ######## Banner closer for better elements visibility ########
-banner =//*[@id="ensCloseBanner"]
+banner =//*[@id='ensCloseBanner']
